Cambios de imagen en el index

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <!-- Card -->
           <article class="transition hover:scale-110 bg-white rounded-lg shadow border-4 border-fuchsia-800 max-w-sm w-full text-center p-6">
             <h3 class="text-2xl font-bold mb-4">Programación Inicial</h3>
-            <img class="w-full h-48 object-contain mb-4 " src="img/python.jpg" alt="programacion">
+            <img class="w-full h-48 object-contain mb-4 " src="img/python.png" alt="programacion">
             <p class="mb-6 text-left">Comienza desde cero con Python y lógica de programación.</p>
             <p class="text-left" >Duración: <span class="font-bold text-fuchsia-800">6 meses</span></p>
             <a href="#" class="font-bold mt-3 inline-block px-6 py-2 bg-fuchsia-600 text-white rounded hover:bg-fuchsia-700 transition">Aplicar</a>
@@ -145,7 +145,7 @@
           <!-- Card -->
           <article class="transition hover:scale-110 bg-white rounded-lg shadow border-4 border-fuchsia-800 max-w-sm w-full text-center p-6">
             <h3 class="text-2xl font-bold mb-4">Análisis de Datos</h3>
-            <img class="w-full h-48 object-contain mb-4" src="img/data.jpg" alt="analisis">
+            <img class="w-full h-48 object-contain mb-4" src="img/data analytics.png" alt="analisis">
             <p class="mb-6 text-left" >Domina herramientas como Python, Pandas y Excel.</p>
             <p class="text-left" >Duración: <span class="font-bold text-fuchsia-800">6 meses</span></p>
             <a href="#" class="font-bold mt-3 inline-block px-6 py-2 bg-fuchsia-600 text-white rounded hover:bg-fuchsia-700 transition">Aplicar</a>
