Agregado items-start

--- a/cursos.html
+++ b/cursos.html
@@ -29,7 +29,7 @@
 
   <!-- Cursos -->
   <section class="px-4 py-12 max-w-7xl mx-auto">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-start">
         <!-- Curso 1 -->
       <article class="bg-white rounded-lg shadow border-4 border-fuchsia-800 p-6 hover:scale-105 transition text-center">
         <h3 class="text-2xl font-bold mb-4">Full Stack</h3>
@@ -67,7 +67,7 @@
       </article>
 
       <!-- Curso 5 -->
-      <article class="bg-white rounded-lg shadow border-4 border-fuchsia-800 p-6 hover:scale-105 transition text-center">
+      <article class="bg-white rounded-lg shadow border-4 border-fuchsia-800 p-6 hover:scale-105 transition text-center ">
         <h3 class="text-2xl font-bold mb-4">Fundamentos de C++</h3>
         <img src="img/cpp.png" alt="C++" class="w-full h-48 object-contain mb-4">
         <p class="text-left mb-4">Aprende C++ desde cero: variables, estructuras, punteros y programación orientada a objetos.</p>
