Agregado el footer

--- a/cursos.html
+++ b/cursos.html
@@ -115,8 +115,19 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-fuchsia-900 text-white py-6 mt-10 text-center">
-    <p>&copy; 2025 Academia DEV. Todos los derechos reservados.</p>
+  <footer class="bg-fuchsia-900 text-white p-6">
+      <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4">
+        <p class="text-center md:text-left">&copy; 2025 Academia DEV. Todos los derechos reservados.</p>
+        <div class="flex gap-4">
+          <a href="#" class="hover:text-fuchsia-300">Política de privacidad</a>
+          <a href="#" class="hover:text-fuchsia-300">Términos de uso</a>
+        </div>
+        <div class="flex gap-4">
+          <a href="#"><img src="img/facebook.svg" class="w-6 h-6" alt="Facebook" /></a>
+          <a href="#"><img src="img/instagram.svg" class="w-6 h-6" alt="Instagram" /></a>
+          <a href="#"><img src="img/twitter.svg" class="w-6 h-6" alt="Twitter" /></a>
+        </div>
+      </div>
   </footer>
 
 </body>
