Agregada seccion faq y correción de app.js

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <!-- Menú grande -->
         <nav class="hidden md:flex space-x-6 text-white font-semibold">
-          <a href="#" class="hover:text-fuchsia-200">Cursos</a>
-          <a href="#" class="hover:text-fuchsia-200">FAQ</a>
-          <a href="#" class="hover:text-fuchsia-200">Nosotros</a>
-          <a href="#" class="hover:text-fuchsia-200">Contacto</a>
+          <a href="cursos.html" class="hover:text-fuchsia-200">Cursos</a>
+          <a href="faq.html" class="hover:text-fuchsia-200">FAQ</a>
+          <a href="nosotros.html" class="hover:text-fuchsia-200">Nosotros</a>
+          <a href="contacto.html" class="hover:text-fuchsia-200">Contacto</a>
         </nav>
       </div>
 
@@ -42,10 +42,10 @@
         id="mobile-menu"
         class="md:hidden hidden mt-2 space-y-2 text-white font-semibold px-2"
       >
-        <a href="#" class="block hover:text-fuchsia-200">Cursos</a>
-        <a href="#" class="block hover:text-fuchsia-200">FAQ</a>
-        <a href="#" class="block hover:text-fuchsia-200">Nosotros</a>
-        <a href="#" class="block hover:text-fuchsia-200">Contacto</a>
+        <a href="cursos.html" class="block hover:text-fuchsia-200">Cursos</a>
+        <a href="faq.html" class="block hover:text-fuchsia-200">FAQ</a>
+        <a href="nosotros.html" class="block hover:text-fuchsia-200">Nosotros</a>
+        <a href="contacto.html" class="block hover:text-fuchsia-200">Contacto</a>
       </nav>
     </header>
 
