--- a/cursos.html
+++ b/cursos.html
@@ -9,17 +9,47 @@
 <body class="bg-gray-50">
 
   <!-- Header -->
-  <header class="bg-fuchsia-900 p-4">
-    <div class="flex justify-between items-center max-w-7xl mx-auto">
-      <h1 class="text-2xl text-white font-bold"><a href="index.html">Academia DEV</a></h1>
-      <nav class="hidden md:flex space-x-6 text-white font-semibold">
-        <a href="cursos.html" class="hover:text-fuchsia-200">Cursos</a>
-        <a href="#" class="hover:text-fuchsia-200">FAQ</a>
-        <a href="#" class="hover:text-fuchsia-200">Nosotros</a>
-        <a href="#" class="hover:text-fuchsia-200">Contacto</a>
+<header class="bg-fuchsia-900 p-4">
+      <div class="flex justify-between items-center max-w-7xl mx-auto">
+        <h1 class="text-2xl text-white font-bold"><a href="index.html">Academia DEV</a></h1>
+
+        <!-- Botón hamburguesa -->
+        <button id="menu-btn" class="text-white md:hidden focus:outline-none">
+          <svg
+            class="w-8 h-8 btn-svg"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+
+        <!-- Menú grande -->
+        <nav class="hidden md:flex space-x-6 text-white font-semibold">
+          <a href="cursos.html" class="hover:text-fuchsia-200">Cursos</a>
+          <a href="faq.html" class="hover:text-fuchsia-200">FAQ</a>
+          <a href="nosotros.html" class="hover:text-fuchsia-200">Nosotros</a>
+          <a href="contacto.html" class="hover:text-fuchsia-200">Contacto</a>
+        </nav>
+      </div>
+
+      <!-- Menú móvil -->
+      <nav
+        id="mobile-menu"
+        class="md:hidden hidden mt-2 space-y-2 text-white font-semibold px-2"
+      >
+        <a href="cursos.html" class="block hover:text-fuchsia-200">Cursos</a>
+        <a href="faq.html" class="block hover:text-fuchsia-200">FAQ</a>
+        <a href="nosotros.html" class="block hover:text-fuchsia-200">Nosotros</a>
+        <a href="contacto.html" class="block hover:text-fuchsia-200">Contacto</a>
       </nav>
-    </div>
-  </header>
+    </header>
 
   <!-- Hero sección -->
   <section class="text-center bg-fuchsia-800 text-white py-12">
@@ -129,6 +159,6 @@
         </div>
       </div>
   </footer>
-
+<script src="app.js"></script>
 </body>
 </html>
