--- a/cursos.html
+++ b/cursos.html
@@ -34,7 +34,7 @@
         <nav class="hidden md:flex space-x-6 text-white font-semibold">
           <a href="cursos.html" class="hover:text-fuchsia-200">Cursos</a>
           <a href="faq.html" class="hover:text-fuchsia-200">FAQ</a>
-          <a href="nosotros.html" class="hover:text-fuchsia-200">Nosotros</a>
+          <a href="#" class="hover:text-fuchsia-200">Nosotros</a>
           <a href="contacto.html" class="hover:text-fuchsia-200">Contacto</a>
         </nav>
       </div>
@@ -46,7 +46,7 @@
       >
         <a href="cursos.html" class="block hover:text-fuchsia-200">Cursos</a>
         <a href="faq.html" class="block hover:text-fuchsia-200">FAQ</a>
-        <a href="nosotros.html" class="block hover:text-fuchsia-200">Nosotros</a>
+        <a href="#" class="block hover:text-fuchsia-200">Nosotros</a>
         <a href="contacto.html" class="block hover:text-fuchsia-200">Contacto</a>
       </nav>
     </header>
